# cookify

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
src/cookify/: cli.py  cookify.py
