[tool.poetry]
name = "cookify"
version = "0.1.0"
description = ""
authors = ["Luca Dalla Valle <luca.dallavalle@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
