[tool.poetry]
name = "cookify"
version = "0.1.0"
description = ""
authors = ["Luca Dalla Valle <luca.dallavalle@outlook.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "cookify", from = "src"}]

[tool.poetry.scripts]
cookify = "cookify.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
typer = {version = "^0.9.0", extras = ["all"]}
python-magic = "^0.4.27"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
